Fix styling issues (.page-content overflowing)

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
 }
 
 .nav li a {
-    transition: 500ms;
+    transition: 300ms;
 }
 
 .nav li a:hover {
@@ -126,7 +126,7 @@
     align-self: center;
     width: 70%;
     max-width: 100vw;
-    margin: 1rem 12vw 1rem 12vw;
+    margin: 1rem 12vw 2rem 12vw;
 }
 
 .info-block {
@@ -226,6 +226,7 @@ img.footer-logo {
 
 .staffRow {
     gap: 2rem;
+    max-width: 100%;
 }
 
 .staffCardCol {
@@ -335,8 +336,10 @@ figure {
         font-size: 10vw !important;
     }
     .page-content {
-        width: 100%;
+        width: 100vw;
+        max-width: 100%;
         padding-inline: 1rem;
+        margin: 0 0 2rem 0;
     }
     .hero-text {
         margin-left: 1rem; 
